Updates from Overleaf

--- a/02_mainmatter/ch2_Grundlagen.tex
+++ b/02_mainmatter/ch2_Grundlagen.tex
@@ -4,80 +4,47 @@
 
 \section{Konventionelle Projektabwicklung in der deutschen Baupraxis}
 \label{sec: 2.1}
-% Ziel: Ziel: Der Leser soll die Struktur, die Rollenverteilung und die prozessualen Schwachstellen der traditionellen Projektabwicklung verstehen. Dieses Kapitel etabliert das "Problem", für das die Arbeit eine Lösung präsentiert.
+Ziel: Der Leser soll die Struktur, die Rollenverteilung und die prozessualen Schwachstellen der traditionellen Projektabwicklung verstehen. Dieses Kapitel etabliert das "Problem", für das die Arbeit eine Lösung präsentiert.
 
-% =====================================================================
-% SCHRITT 1: EINLEITUNG -- DIE ETABLIERTE ORDNUNG
-% =====================================================================
-% Zielsetzung: Den Leser in das Thema einführen und die prägenden 
-% Regelwerke der konventionellen Projektabwicklung in Deutschland benennen.
-%
-% Inhaltlicher roter Faden:
-% - Feststellung: Die deutsche Baupraxis wird maßgeblich durch HOAI und 
-%   VOB geformt.
-% - Grundprinzip herausarbeiten: Strikte Trennung von Planungs- und 
-%   Ausführungsleistungen.
-% - Charakterisierung des Modells: Sequenzieller Ablauf in Phasen.
-% - Quellen: Berner et al., Girmscheid.
-%
-% =====================================================================
-% SCHRITT 2: DAS PROZESSMODELL -- DIE HOAI-LEISTUNGSPHASEN
-% =====================================================================
-% Zielsetzung: Das abstrakte "Phasenmodell" mit dem konkreten Ablauf der 
-% HOAI-Leistungsphasen füllen und dessen starre, lineare Struktur verdeutlichen.
-%
-% Inhaltlicher roter Faden:
-% - Prozessstruktur: Wird durch die neun Leistungsphasen der HOAI definiert.
-% - Darstellung des Ablaufs: Inhärent linear und sequenziell (LPH 1 -> LPH 9).
-% - Kritischen Punkt identifizieren: Wesentliche Kosten- und Qualitätsentscheidungen 
-%   fallen in den frühen Planungsphasen (insb. LPH 2-3).
-% - Problem benennen: Zu diesem frühen Zeitpunkt fehlt die vertraglich gebundene 
-%   Expertise der Ausführung.
-% - Empfehlung: Visualisierung des linearen Ablaufs durch ein einfaches Diagramm.
-%
-% =====================================================================
-% SCHRITT 3: DIE ORGANISATIONSSTRUKTUR -- GETRENNTE "SILOS"
-% =====================================================================
-% Zielsetzung: Die prozessuale Trennung auf die organisatorische Ebene 
-% übertragen und das Problem der isolierten Akteure ("Silos") einführen.
-%
-% Inhaltlicher roter Faden:
-% - Organisationsstruktur beschreiben: Klassische Dreieckskonstellation 
-%   (Bauherr, Planer, Ausführender) mit bilateralen Verträgen.
-% - Problem der "Silos" formulieren: Jeder Akteur ist primär auf die Erfüllung 
-%   des eigenen Vertrags fokussiert.
-% - Kommunikationswege aufzeigen: Oft nur indirekt über den Bauherrn, nicht 
-%   disziplinübergreifend.
-%
-% =====================================================================
-% SCHRITT 4: DIE KONSEQUENZEN -- STRUKTURELLE SCHWACHSTELLEN
-% =====================================================================
-% Zielsetzung: Die negativen, systemischen Folgen der beschriebenen Struktur 
-% klar benennen und mit Belegen untermauern. Dies ist der Kern der Problemanalyse.
-%
-% Inhaltlicher roter Faden:
-% - Schwachstellen auflisten und erläutern:
-%   - Späte Einbindung von ausführendem Know-how.
-%   - Informationsverluste an den Schnittstellen.
-%   - Entstehung eines adversialen Projektklimas (Fokus auf Nachtragsmanagement).
-% - Konsequenzen belegen: Direkte Verbindung zu Kosten- und Terminüberschreitungen 
-%   herstellen und mit empirischen Daten stützen (z.B. Verweis auf die Studie von 
-%   Korn & Roll, 2019).
-%
-% =====================================================================
-% SCHRITT 5: FAZIT UND ÜBERLEITUNG
-% =====================================================================
-% Zielsetzung: Den Abschnitt argumentativ abrunden und eine logische Brücke 
-% zum folgenden Kapitel schlagen.
-%
-% Inhaltlicher roter Faden:
-% - Zusammenfassen: Das konventionelle Modell bietet zwar einen klaren rechtlichen 
-%   Rahmen, weist jedoch inhärente Schwächen auf, die Effizienz und Kooperation behindern.
-% - Schlussfolgerung: Angesichts aktueller Herausforderungen ist das Modell zunehmend 
-%   reformbedürftig.
-% - Überleitung formulieren: Hinweis auf die Entwicklung alternativer, international 
-%   etablierter Projektabwicklungsmodelle als Reaktion auf diese Defizite.
-%
+\subsection{Einleitung -- Die etablierte Ordnung}
+\label{sec: 2.1.1}
+Zielsetzung: Den Leser in das Thema einführen und die prägenden Regelwerke der konventionellen Projektabwicklung in Deutschland benennen.\\
+- Feststellung: Die deutsche Baupraxis wird maßgeblich durch HOAI und VOB geformt.\\
+- Grundprinzip herausarbeiten: Strikte Trennung von Planungs- und Ausführungsleistungen.\\
+- Charakterisierung des Modells: Sequenzieller Ablauf in Phasen.\\
+
+\subsection{Das Prozessmodell - HOAI Leistungsphase2}
+\label{sec: 2.1.2}
+Zielsetzung: Das abstrakte "Phasenmodell" mit dem konkreten Ablauf der HOAI-Leistungsphasen füllen und dessen starre, lineare Struktur verdeutlichen.\\
+- Prozessstruktur: Wird durch die neun Leistungsphasen der HOAI definiert.\\
+- Darstellung des Ablaufs: Inhärent linear und sequenziell (LPH 1 -> LPH 9).\\
+- Kritischen Punkt identifizieren: Wesentliche Kosten- und Qualitätsentscheidungen fallen in den frühen Planungsphasen (insb. LPH 2-3).\\
+- Problem benennen: Zu diesem frühen Zeitpunkt fehlt die vertraglich gebundene Expertise der Ausführung.\\
+- Empfehlung: Visualisierung des linearen Ablaufs durch ein einfaches Diagramm.\\
+
+\subsection{Die Organisationsstruktur - getrennte Silos}
+\label{sec: 2.1.3}
+Zielsetzung: Die prozessuale Trennung auf die organisatorische Ebene übertragen und das Problem der isolierten Akteure ("Silos") einführen.\\
+- Organisationsstruktur beschreiben: Klassische Dreieckskonstellation (Bauherr, Planer, Ausführender) mit bilateralen Verträgen.\\
+- Problem der "Silos" formulieren: Jeder Akteur ist primär auf die Erfüllung des eigenen Vertrags fokussiert.\\
+- Kommunikationswege aufzeigen: Oft nur indirekt über den Bauherrn, nicht disziplinübergreifend.\\
+
+\subsection{Die Konsequenzen - strukturelle Schwachstellen}
+\label{sec: 2.1.4}
+Zielsetzung: Die negativen, systemischen Folgen der beschriebenen Struktur klar benennen und mit Belegen untermauern. Dies ist der Kern der Problemanalyse.\\
+- Schwachstellen auflisten und erläutern:\\
+- Späte Einbindung von ausführendem Know-how.\\
+- Informationsverluste an den Schnittstellen.\\
+- Entstehung eines adversialen Projektklimas (Fokus auf Nachtragsmanagement).\\
+- Konsequenzen belegen: Direkte Verbindung zu Kosten- und Terminüberschreitungen herstellen und mit empirischen Daten stützen\\
+
+\subsection{Fazit und Überleitung}
+\label{sec: 2.1.5}
+Zielsetzung: Den Abschnitt argumentativ abrunden und eine logische Brücke zum folgenden Kapitel schlagen.\\
+
+- Zusammenfassen: Das konventionelle Modell bietet zwar einen klaren rechtlichen Rahmen, weist jedoch inhärente Schwächen auf, die Effizienz und Kooperation behindern.
+- Schlussfolgerung: Angesichts aktueller Herausforderungen ist das Modell zunehmend reformbedürftig.\\
+- Überleitung formulieren: Hinweis auf die Entwicklung alternativer, international etablierter Projektabwicklungsmodelle als Reaktion auf diese Defizite.
 
 \clearpage
 
