--- a/08_bibliography/references.bib
+++ b/08_bibliography/references.bib
@@ -1,4 +1,15 @@
 
+@misc{noauthor_baukrise_2025,
+	title = {Baukrise 2025: {Ursachen}, {Auswirkungen} und {Lösungsansätze}},
+	shorttitle = {Baukrise 2025},
+	url = {https://www.buildingnet.de/politik---verbaende/die-herausforderungen-der-bauindustrie--eine-analyse-der-aktuellen-baukrise.htm},
+	abstract = {Kann Deutschland den Wohnungsbau retten? Wo liegen die anderen Probleme? So reagiert die Branche.},
+	language = {de},
+	urldate = {2025-10-12},
+	month = jul,
+	year = {2025},
+}
+
 @article{benner-wickner_leitfaden_2020,
 	title = {Leitfaden für die {Nutzung} von {Design} {Science} {Research} in {Abschlussarbeiten}},
 	abstract = {A common topic when performing research in technical disciplines is to design some kind of artefact, such as a model, an information system, or a method for performing a certain task. To address this topic in a systematic and scientific way, Design Science Research (DSR) has established itself as an appropriate research method. There are many different variations of DSR, on different levels of complexity and detail, but all are based on an iterative approach of designing the desired artefact and evaluating it. This makes it difficult for many students to get an understanding of DSR in order to use it for their thesis (on bachelor or master level). The goal of the current paper therefore is to provide a short introduction to DSR for these students, based on the DSR variant described by (Österle et al., 2010) which is considered fairly basic and easy to understand and use. We do not try to introduce any new approach to DSR but provide a short introduction to this existing variant of DSR.},
@@ -18,9 +29,6 @@
 	publisher = {Beltz},
 	author = {Mayring, Philipp},
 	year = {2022},
-}
-
-@book{noauthor_notitle_nodate,
 }
 
 @book{vom_brocke_design_2020,
