Updates from Overleaf

--- a/01_frontmatter/acronyms.tex
+++ b/01_frontmatter/acronyms.tex
@@ -1,4 +1,4 @@
-\chapter*{Abkürzungsverzeichnis}
+\chapter{Abkürzungsverzeichnis}
 \markright{Abkürzungsverzeichnis}
 
 % Short-first nur bei der ersten Stelle; danach gilt "benutzt".
