Updates from Overleaf

--- a/02_mainmatter/ch3_Methodik.tex
+++ b/02_mainmatter/ch3_Methodik.tex
@@ -269,15 +269,25 @@ Die im folgenden aufgeführten Einschränkungen sollen die Ergebnisse aus der in
 %     - Modellierungsansatz: Begründung für die Wahl eines Prozessmodells (z.B. Flussdiagramm, Swimlane).
 %     - Validierung: Logische Prüfung des Modells auf Konsistenz und Vollständigkeit basierend auf der Literatur.
 
+Die Auswertung der im Rahmen der in \cref{sec: 3.2} beschriebenen Literaturrecherche identifizierten Quellen erfolgt mittels einer qualitativen Inhaltsanalyse.
+
+\subsection{Analytische Phase: Identifikation der Prozessbausteine}
+\label{3.3.1}
+
+\subsection{Synthetische Phase: Modellierung des idealtypischen Prozesses}
+
+
 \FloatBarrier
 
 \section{Kontextanalyse und Ableitung des Transferleitfadens}
 \label{sec: 3.4}
 
-%   - Ziel: Den analytischen Vergleich und die Ableitung der Handlungsempfehlungen beschreiben.
-%   - Inhalt:
-%     - Gegenüberstellung: Systematischer Vergleich des TVD-Modells mit der deutschen Baupraxis (Basis: Kapitel 2.1).
-%     - Analysefokus: Strukturelle, rechtliche (HOAI/VOB) und kulturelle Gegebenheiten.
-%     - Identifikation: Ziel ist das Aufdecken von Reibungspunkten und Anpassungsbedarfen ("Fit-Gap-Analyse").
-%     - Struktur des Leitfadens: Erläutern, wie die Ergebnisse zu konkreten Handlungsempfehlungen aufbereitet werden.
+Nachdem im vorangegangenen Schritt das idealtypische Prozessmodell des Target Value Design konstruiert wurde, erfolgt nun dessen systematischer Abgleich mit den spezifischen Rahmenbedingungen der deutschen Baupraxis, um die Grundlage für den Transferleitfaden zu schaffen.\\
+
+Ziel: Bewertung der Übertragbarkeit des in \cref{sec: 3.3} entwickelten idealtypischen\ac{TVD}-Prozesses auf die deutsche Baupraxis\\
+
+Prozess: Dazu sollen in einer Gegenüberstellung beider Prozesse, die Übereinstimmungen (Fit) und Abweichungen (Gap) zwischen \ac{TVD} und den Rahmenbedingungen der deutschen Baupraxis herausgearbeitet werden.\\
+
+Ergebnis: Die aus den identifizierten Reibungspunkten abgeleiteten, notwendigen Anpassungen werden in Form eines Transferleitfadens zusammengeführt und so eine Empfehlung für die Anwendung von \ac{TVD} in Deutschland liefern.\\
+
 
