Updates from Overleaf

--- a/00_config/packages.tex
+++ b/00_config/packages.tex
@@ -6,6 +6,9 @@
 \usepackage{lmodern}               % Moderne Latin Modern Schrift
 \usepackage{microtype}
 
+\usepackage{soul}         % farbiges markieren von Text
+\sethlcolor{yellow!35}    % Farbe
+
 % ===== SEITENLAYOUT =====
 \usepackage[left=3cm,right=2.5cm,top=3cm,bottom=3cm]{geometry}
 \usepackage{setspace}              % Zeilenabstand-Kontrolle
