--- a/02_mainmatter/ch3_Methodik.tex
+++ b/02_mainmatter/ch3_Methodik.tex
@@ -28,11 +28,9 @@ Die vorliegende Arbeit folgt einem qualitativen Forschungsansatz, da der Fokus a
 \subsection{Wahl des konkreten Forschungsdesigns}
 \label{sec: 3.1.3}
 
-  \subsection{Gütekriterien}
-\label{sec: 3.1.4}
 
 \subsection{Visualisierung des Forschungsprozesses}
-\label{sec: 3.1.5}
+\label{sec: 3.1.4}
 Zur Veranschaulichung des methodischen Aufbaus und Verlauf dieser Arbeit visualisiert \cref{fig:forschungsprozess_tikz} den Forschungsprozess in seinen verschiedenen Phasen.
 
 \tikzset{
@@ -272,22 +270,61 @@ Die im folgenden aufgeführten Einschränkungen sollen die Ergebnisse aus der in
 Die Auswertung der im Rahmen der in \cref{sec: 3.2} beschriebenen Literaturrecherche identifizierten Quellen erfolgt mittels einer qualitativen Inhaltsanalyse.
 
 \subsection{Analytische Phase: Identifikation der Prozessbausteine}
-\label{3.3.1}
+\label{sec: 3.3.1}
 
 \subsection{Synthetische Phase: Modellierung des idealtypischen Prozesses}
 
 
 \FloatBarrier
+\clearpage
 
 \section{Kontextanalyse und Ableitung des Transferleitfadens}
 \label{sec: 3.4}
 
+\subsection{Einleitung \& Zielsetzung}
+\label{sec: 3.4.1}
 Nachdem im vorangegangenen Schritt das idealtypische Prozessmodell des Target Value Design konstruiert wurde, erfolgt nun dessen systematischer Abgleich mit den spezifischen Rahmenbedingungen der deutschen Baupraxis, um die Grundlage für den Transferleitfaden zu schaffen.\\
 
-Ziel: Bewertung der Übertragbarkeit des in \cref{sec: 3.3} entwickelten idealtypischen\ac{TVD}-Prozesses auf die deutsche Baupraxis\\
+Ziel: Bewertung der Übertragbarkeit des in \cref{sec: 3.3} entwickelten idealtypischen \ac{TVD}-Prozesses auf die deutsche Baupraxis\\
 
 Prozess: Dazu sollen in einer Gegenüberstellung beider Prozesse, die Übereinstimmungen (Fit) und Abweichungen (Gap) zwischen \ac{TVD} und den Rahmenbedingungen der deutschen Baupraxis herausgearbeitet werden.\\
 
-Ergebnis: Die aus den identifizierten Reibungspunkten abgeleiteten, notwendigen Anpassungen werden in Form eines Transferleitfadens zusammengeführt und so eine Empfehlung für die Anwendung von \ac{TVD} in Deutschland liefern.\\
+Ergebnis: Die aus den identifizierten Reibungspunkten abgeleiteten, notwendigen Anpassungen werden in Form eines Transferleitfadens zusammengeführt um so eine Empfehlung für die Anwendung von \ac{TVD} in Deutschland zu liefern.\\
+
+\subsection{Methodischer Ansatz: Framework Analysis}
+\label{sec: 3.4.2}
+
+Für die Fit-Gap Analyse wurde sich an der Framework Analysis orientiert, da diese eine strukturierte qualitative Gegenüberstellung vorhandener Konzepte und Rahmenbedingungen ermöglicht. \hl{Initial wurde die Framework Analysis Methode von Ritchie \& Spencer (1994) für den Breich der angewandten Policy-Foschung entwickelt\autocite[Vgl.][S.2]{gale_using_2013} und in den folgenden Jahren durch Ritchie et. al (2014) und Gale et. al (2013) weiter verfeinert und modernisiert.}\\
+Für die Anwendung der Framework Analysis wurde das Vorgehen in Anlehnung an Gale et al. (2013) adaptiert.
+Da keine empirischen Daten, sondern bestehende Dokumente (Prozessmodelle, Regelwerke, Fachliteratur) untersucht werden, entfallen die transkriptions- und kodierbasierten Schritte der Originalmethode.
+Die Analyse folgt daher einer reduzierten, konzeptionellen Form des Verfahrens, bestehend aus fünf aufeinander aufbauenden Phasen:
+\begin{enumerate}
+    \item Familiarisierung mit dem Material
+    \item Entwicklung des thematischen Frameworks
+    \item Indexierung
+    \item tabellarische Gegenüberstellung (Charting) und
+    \item Interpretation im Sinne einer Fit-Gap-Analyse.
+\end{enumerate}
+%
+% Parkinson, S., Eatough, V., Holmes, J., Stapley, E., & Midgley, N. (2016). Framework analysis: A worked example of a study exploring young people’s experiences of depression. Qualitative Research in Psychology, 13(2), 109–129.
+%
+% Ward, D. J., Furber, C., Tierney, S., & Swallow, V. (2013). Using Framework Analysis in nursing research: A worked example. Journal of Advanced Nursing, 69(11), 2423–2431.
+%  
+% Beide zeigen, dass Framework Analysis auch dokument- oder theoriebasiert angewandt werden kann – nicht nur auf Interviewdaten.
+%
+\subsection{Durchführung der Analyse}
+\label{sec: 3.4.3}
+
+Vergleichsgrundlage A: idealtypischer TVD-Prozess (\cref{sec: 3.3}).\\
+Vergleichsgrundlage B: deutsche Baupraxis (HOAI, VOB, AHO, Projekterfahrung) aus \cref{sec: 2.1}
+
+Schritte:\\
+1. Zuordnung relevanter Prozessmerkmale zu den drei Analyse-Dimensionen (z.B. rechtlich, prozessual, kulturell).\\
+2. Übertragung in eine Framework-Matrix (z. B. Vertragsstruktur, Kostensteuerung, Rollenverständnis).\\
+3. Bewertung der Übereinstimmung (Fit) bzw. Abweichung (Gap).\\
+Ergebnis: eine systematische Fit-Gap-Analyse als Grundlage des Transferleitfadens.
+
+\subsection{Ableitung des Transferleitfadens}
+\label{sec: 3.4.4}
 
 
