--- a/08_bibliography/references.bib
+++ b/08_bibliography/references.bib
@@ -1,4 +1,84 @@
 
+@book{lamnek_qualitative_2016,
+	address = {Weinheim},
+	edition = {6., vollständig überarbeitete Aufl},
+	title = {Qualitative {Sozialforschung}: {Mit} {Online}-{Materialien}},
+	isbn = {978-3-621-28269-7 978-3-621-28362-5},
+	shorttitle = {Qualitative {Sozialforschung}},
+	abstract = {"Qualitative Sozialforschung" ist ein Klassiker der Methodenlehre in der Psychologie, Soziologie und Kommunikationswissenschaft. Es handelt sich um ein Überblickswerk, das verschiedenste qualitative Methoden aufführt, z.B. die Gruppendiskussion, das qualitative Interview oder die Inhaltsanalyse. Wie führe ich eine Gruppendiskussion? In welchen Situationen ist ein qualitatives Interview einem strukturierten Fragebogen überlegen? Gibt es Besonderheiten bei der Anwendung der Methoden bei Kindern, Jugendlichen oder älteren Menschen? All diese Fragen betreffen die qualitative Sozialforschung und werden im vorliegenden Lehrbuch beantwortet. Die überarbeitete 6. Auflage bezieht außerdem Themen wie Globalisierung, Fremdsprachen und Ethnografie und deren Einfluss auf qualitative Forschungsmethoden mit ein},
+	language = {de},
+	publisher = {Beltz},
+	author = {Lamnek, Siegfried and Krell, Claudia},
+	year = {2016},
+}
+
+@article{gale_using_2013,
+	title = {Using the framework method for the analysis of qualitative data in multi-disciplinary health research},
+	volume = {13},
+	issn = {1471-2288},
+	url = {https://bmcmedresmethodol.biomedcentral.com/articles/10.1186/1471-2288-13-117},
+	doi = {10.1186/1471-2288-13-117},
+	abstract = {Background: The Framework Method is becoming an increasingly popular approach to the management and analysis of qualitative data in health research. However, there is confusion about its potential application and limitations. Discussion: The article discusses when it is appropriate to adopt the Framework Method and explains the procedure for using it in multi-disciplinary health research teams, or those that involve clinicians, patients and lay people. The stages of the method are illustrated using examples from a published study. Summary: Used effectively, with the leadership of an experienced qualitative researcher, the Framework Method is a systematic and flexible approach to analysing qualitative data and is appropriate for use in research teams even where not all members have previous experience of conducting qualitative research.},
+	language = {en},
+	number = {1},
+	urldate = {2025-10-19},
+	journal = {BMC Medical Research Methodology},
+	author = {Gale, Nicola K and Heath, Gemma and Cameron, Elaine and Rashid, Sabina and Redwood, Sabi},
+	month = sep,
+	year = {2013},
+	pages = {117},
+}
+
+@book{kuckartz_qualitative_2018,
+	address = {Weinheim},
+	edition = {4., überarbeitete Aufl},
+	series = {Grundlagentexte {Methoden}},
+	title = {Qualitative {Inhaltsanalyse}. {Methoden}, {Praxis}, {Computerunterstützung}},
+	isbn = {978-3-7799-3682-4 978-3-7799-4683-0},
+	abstract = {Interviews, Gruppendiskussionen oder Feldnotizen systematisch und kontrolliert auswerten Dieses Lehrbuch bietet eine methodisch fundierte, verständliche und anwendungsbezogene Anleitung zur inhaltsanalytischen Auswertung dieser und anderer qualitativer Daten. Dabei werden drei Basismethoden qualitativer Inhaltsanalyse im Detail vorgestellt: die inhaltlich strukturierende, die evaluative und die typenbildende qualitative Inhaltsanalyse. Ein Begleiter im Forschungsalltag verschiedenster Disziplinen – Sozial-, Erziehungs-, Pflegewissenschaften, Psychologie, Soziale Arbeit u.v.m},
+	language = {de},
+	publisher = {Beltz},
+	author = {Kuckartz, Udo},
+	year = {2018},
+}
+
+@book{krcmar_einfuhrung_2015,
+	address = {Berlin, Heidelberg},
+	edition = {2., überarb. Aufl. 2015},
+	series = {Springer-{Lehrbuch}},
+	title = {Einführung in das {Informationsmanagement}},
+	isbn = {978-3-662-44328-6 978-3-662-44329-3},
+	language = {de},
+	publisher = {Springer Gabler},
+	author = {Krcmar, Helmut},
+	year = {2015},
+	doi = {10.1007/978-3-662-44329-3},
+}
+
+@article{habib_alternative_2020,
+	title = {Alternative {Ansätze} für einen {Paradigmenwechsel} bei {Planung} und {Ausführung} von {Infrastrukturprojekten} in {Deutschland}},
+	copyright = {Creative Commons Attribution Share Alike 4.0 International, open access},
+	url = {https://kobra.uni-kassel.de/handle/123456789/11924},
+	doi = {10.17170/KOBRA-202010131935},
+	language = {de},
+	urldate = {2025-10-13},
+	author = {Habib, Mai},
+	collaborator = {{Universität Kassel}},
+	year = {2020},
+	note = {Publisher: Universität Kassel},
+	keywords = {300, 620, Alternative, Deutschland, Paradigmenwechsel, Projektabwicklung, Projektmanagement, Projektplanung, Verkehrsinfrastruktur, neue Ansätze},
+}
+
+@misc{noauthor_hoai_nodate,
+	title = {{HOAI} 2021: {Volltext} der aktuellen {HOAI} online auf {HOAI}.de},
+	shorttitle = {{HOAI} 2021},
+	url = {https://www.hoai.de/hoai/volltext/hoai-2021/},
+	abstract = {Hier finden Sie den vollständigen Text der aktuellen HOAI (Honorarordnung für Architekten und Ingenieure) in der Fassung von 2021.},
+	language = {de},
+	urldate = {2025-10-12},
+	journal = {HOAI.de},
+}
+
 @misc{noauthor_baukrise_2025,
 	title = {Baukrise 2025: {Ursachen}, {Auswirkungen} und {Lösungsansätze}},
 	shorttitle = {Baukrise 2025},
