Updates from Overleaf

--- a/02_mainmatter/ch3_Methodik.tex
+++ b/02_mainmatter/ch3_Methodik.tex
@@ -315,8 +315,8 @@ Die Analyse folgt daher einer reduzierten, konzeptionellen Form des Verfahrens, 
 \subsection{Durchführung der Analyse}
 \label{sec: 3.4.3}
 
-Vergleichsgrundlage A: idealtypischer TVD-Prozess (\cref{sec: 3.3}).\\
-Vergleichsgrundlage B: deutsche Baupraxis (HOAI, VOB, AHO, Projekterfahrung) aus \cref{sec: 2.1}
+Die Ausführung der Framework Analyse folgt dem im vorherigen Abschnitt skizzierten Ablauf.
+Vergleichsgrundlage bilden hier die in \cref{sec: 3.3} identifizierten Merkmale des idealtypischen  \ac{TVD}-Prozesses sowie die Regelwerke welche die deutsche Baupraxis im wesentlichen prägen (\acs{HOAI},\acs{VOB},\acs{AHO}, \cref{sec: 2.1})
 
 Schritte:\\
 1. Zuordnung relevanter Prozessmerkmale zu den drei Analyse-Dimensionen (z.B. rechtlich, prozessual, kulturell).\\
