--- a/01_frontmatter/acronyms.tex
+++ b/01_frontmatter/acronyms.tex
@@ -5,6 +5,7 @@
 \newcommand{\acsf}[1]{\acs{#1} (\acl{#1})\acused{#1}}
 
 \begin{acronym}[PRISMA]  % Längste Abkürzung für Spaltenbreite
+    \acro{AHO}{Ausschuss der Verbände und Kammern der Ingenieure und Architekten für die Honorarordnung}
     \acro{BIM}{Building Information Modeling}
     \acro{IPA}{Integrierte Projektabwicklung}
     \acro{IPD}{Integrated Project Delivery}
