Updates from Overleaf

--- a/02_mainmatter/ch2_Grundlagen.tex
+++ b/02_mainmatter/ch2_Grundlagen.tex
@@ -13,7 +13,9 @@ Zielsetzung: Den Leser in das Thema einführen und die prägenden Regelwerke der
 - Grundprinzip herausarbeiten: Strikte Trennung von Planungs- und Ausführungsleistungen.\\
 - Charakterisierung des Modells: Sequenzieller Ablauf in Phasen.\\
 
-\subsection{Das Prozessmodell - HOAI Leistungsphase2}
+
+
+\subsection{Das Prozessmodell - HOAI Leistungsphasen}
 \label{sec: 2.1.2}
 Zielsetzung: Das abstrakte "Phasenmodell" mit dem konkreten Ablauf der HOAI-Leistungsphasen füllen und dessen starre, lineare Struktur verdeutlichen.\\
 - Prozessstruktur: Wird durch die neun Leistungsphasen der HOAI definiert.\\
@@ -24,10 +26,10 @@ Zielsetzung: Das abstrakte "Phasenmodell" mit dem konkreten Ablauf der HOAI-Leis
 
 \subsection{Die Organisationsstruktur - getrennte Silos}
 \label{sec: 2.1.3}
-Zielsetzung: Die prozessuale Trennung auf die organisatorische Ebene übertragen und das Problem der isolierten Akteure ("Silos") einführen.\\
+Zielsetzung: Die prozessuale Trennung auf die organisatorische Ebene übertragen und das Problem der isolierten Akteure (Silos) einführen.\\
 - Organisationsstruktur beschreiben: Klassische Dreieckskonstellation (Bauherr, Planer, Ausführender) mit bilateralen Verträgen.\\
 - Problem der "Silos" formulieren: Jeder Akteur ist primär auf die Erfüllung des eigenen Vertrags fokussiert.\\
-- Kommunikationswege aufzeigen: Oft nur indirekt über den Bauherrn, nicht disziplinübergreifend.\\
+- Kommunikationswege: Oft nur indirekt über den Bauherrn, nicht disziplinübergreifend.\\
 
 \subsection{Die Konsequenzen - strukturelle Schwachstellen}
 \label{sec: 2.1.4}
@@ -36,11 +38,11 @@ Zielsetzung: Die negativen, systemischen Folgen der beschriebenen Struktur klar 
 - Späte Einbindung von ausführendem Know-how.\\
 - Informationsverluste an den Schnittstellen.\\
 - Entstehung eines adversialen Projektklimas (Fokus auf Nachtragsmanagement).\\
-- Konsequenzen belegen: Direkte Verbindung zu Kosten- und Terminüberschreitungen herstellen und mit empirischen Daten stützen\\
+- Direkte Verbindung zu Kosten- und Terminüberschreitungen herstellen\\
 
 \subsection{Fazit und Überleitung}
 \label{sec: 2.1.5}
-Zielsetzung: Den Abschnitt argumentativ abrunden und eine logische Brücke zum folgenden Kapitel schlagen.\\
+Zielsetzung: Den Abschnitt abschließen und eine Brücke zum folgenden Kapitel schlagen.\\
 
 - Zusammenfassen: Das konventionelle Modell bietet zwar einen klaren rechtlichen Rahmen, weist jedoch inhärente Schwächen auf, die Effizienz und Kooperation behindern.
 - Schlussfolgerung: Angesichts aktueller Herausforderungen ist das Modell zunehmend reformbedürftig.\\
@@ -53,7 +55,7 @@ Zielsetzung: Den Abschnitt argumentativ abrunden und eine logische Brücke zum f
 
 % Ziel: Der Leser soll eine Einführung in die Entstehung und Entwicklung integrierter Projekabwicklung bekommen.
 
-\subsection{Der Lean-Ansatz als Fundament integrierter Projektabwicklung}
+\subsection{Der Lean-Ansatz als Fundament der \ac{IPA}}
 \label{sec:2.2.1}
 
 % Ziel: Vermittlung der Lean-Pilosophie als Ursprungsgedanke und der Weiterentwicklung über Lean Construction zu kollaborativen Projekabwicklungsmodellen
@@ -74,24 +76,25 @@ Ursprung und Entwicklung von Projetct Alliancing, IPD und IPA bis heute
 \subsection{Prinzipien und Merkmale der Integrierten Projektabwicklung (IPA)}
 \label{sec:2.2.2}
 
-% - Positionierung: IPA als "Betriebssystem" für die Lean-Prinzipien.
-% - Zentrale Merkmale definieren:
-%   - Frühzeitige Integration aller Schlüsselpartner.
-%   - Mehrparteienvertrag.
-%   - Gemeinsames Risikomanagement (Chancen-/Risikopool).
-%   - Kollaborative Kultur statt adversialer Haltung.
+IPA als ist das organisatorische und vertragliche "Betriebssystem", um die Lean-Philosophie in Bauprojekten praktisch umzusetzen.\\
+
+Schlüsseleigenschaften und IPA-Charakteristika:\\
+- Frühzeitige Integration aller Schlüsselpartner (Planer und Ausführende) von Beginn an.\\
+Ein Mehrparteienvertrag, der alle Partner an einen Tisch bindet.\\
+Ein gemeinsames Risikomanagement (Chancen-/Risikopool).\\
+Eine kollaborative Kultur und gemeinsame Entscheidungsfindung.\\
+
 
 \subsection{Internationale Erfolge und Status Quo in Deutschland}
 \label{sec:2.2.3}
 
-% - Internationale Perspektive: Ursprünge und Erfolge im angelsächsischen 
-%   Raum (Project Alliancing, IPD) (Quelle: Cook et al., 2014).
-% - Situation in Deutschland:
-%   - Thema hat stark an Fahrt aufgenommen.
-%   - Anzahl der Pilotprojekte nennen (Quelle: Haghsheno et al., 2024).
-% - Überleitung zu 2.3: Feststellung, dass TVD die zentrale Methode zur 
-%   Kosten- und Wertsteuerung in IPA-Modellen ist.
 
+
+International: Hohe Erfolgsquoten im angelsächsischen Raum (USA, UK, Australien mit "Project Alliancing") bei der Einhaltung von Kosten und Terminen (Quelle z.B. cook2014).\\
+
+Deutschland: Das Thema gewinnt stark an Fahrt: es gibt eine wachsende Zahl an Pilotprojekten (Quelle: IPA-Report 2024 von haghsheno2025).\\
+
+Eine zentrale Kernmethode zur Kosten- und Wertsteuerung innerhalb dieser IPA-Modelle ist das Target Value Design.\\
 \clearpage
 
 \section{Target Value Design (TVD) als Kernmethode}
@@ -136,6 +139,7 @@ Ursprung und Entwicklung von Projetct Alliancing, IPD und IPA bis heute
 
 Zur Hinleitung auf die in \cref{ch:methodik} beschriebene, methodische Vorgehensweise soll an dieser Stelle auf das in dieser Arbeit zu Grunde liegende Verständnis von \ac{TVD} als Prozess bzw. Methode eingegangen werden.\\
 In der Literatur ist die Abgrenzung zwischen Prozess und Methode in der aktuellen Diskussion um TVD unscharf. Folgt man dem Ergebnis einer einfachen Stichwortsuche in einschlägigen wissenschaftlichen Datenbanken (z.B. reseachgate.net) so wird schnell deutlich, das in der überwiegenden Mehrheit der Literatur (ca. 70\%) Target Value Design als Prozess verstanden wird.
-Glenn Ballard, der als einer Gründer des \ac{TVD} gilt, bezeichnet letzteres hingegen häufig als Managementansatz bzw. Management-Methode \autocite[]{}.
+Glenn Ballard, der als einer Gründer des \ac{TVD} gilt, bezeichnet letzteres hingegen häufig als Managementansatz bzw. Management-Methode \autocite[]{}.\\
+% In der allgemeinen Literatur wird ein Prozess als
 
-In der allgemeinen Literatur wird ein Prozess als 
+- Definition Prozess Vs. Methode: Verständnis als Management Methode die durch einen sturkturierten Prozess umgesetzt wird -> legitimiert die nachfolgende prozessoroentierte Darstelung.\\
