Updates from Overleaf

--- a/02_mainmatter/ch2_Grundlagen.tex
+++ b/02_mainmatter/ch2_Grundlagen.tex
@@ -143,3 +143,40 @@ Glenn Ballard, der als einer Gründer des \ac{TVD} gilt, bezeichnet letzteres hi
 % In der allgemeinen Literatur wird ein Prozess als
 
 - Definition Prozess Vs. Methode: Verständnis als Management Methode die durch einen sturkturierten Prozess umgesetzt wird -> legitimiert die nachfolgende prozessoroentierte Darstelung.\\
+
+\subsection{Ziele und Grundprinzipien von TVD}
+\label{sec: 2.3.2}
+
+Ziel: Kosten als Inputgröße statt Outputgröße der Planung.\\
+
+Prinzipien:\\
+- Set-based Design\\
+- Collaborative Cost Estimation\\
+- Value Definition durch den Nutzer\\
+- Continuous Cost Validation\\
+- ggf. Bezug zu Lean-Grundsätzen (Wert, Fluss, Pull, Perfektion).\\
+
+\subsection{Prozessstruktur und Rollen im TVD-Prozess}
+\label{sec: 2.3.3}
+
+- Phasenstruktur nach Literatur\\
+- Rollen und Verantwortlichkeiten\\
+- Kommunikations- und Entscheidungslogik\\
+- Fazit / Relevanz für die Arbeit\\
+
+\subsection{Abgrenzung und Schnittstellen zu verwandten Methoden}
+\label{sec: 2.3.4}
+
+- Unterschied zu Target Costing (Industrie) und Value Engineering (klassische Planung).\\
+
+- Einordnung in IPA-Kontext.\\
+
+- Relevanz: Warum TVD nicht nur Kostentechnik, sondern Führungsprinzip ist.\\
+
+\subsection{Fazit und Überleitung zur Methodik}
+\label{sec: 2.3.5}
+- TVD als prozessorientierte Managementmethode mit systematischer Kosten- und Wertsteuerung.\\
+
+Zur detaillierten Untersuchung dieses Prozesses im Kontext der deutschen Baupraxis wird im folgenden Kapitel das methodische Vorgehen beschrieben. Dabei wird zunächst das Forschungsdesign erläutert und anschließend dargelegt, wie der idealtypische TVD-Prozess systematisch analysiert und modelliert wird.
+
+\clearpage
