Updates from Overleaf

--- a/02_mainmatter/ch4_Analyse.tex
+++ b/02_mainmatter/ch4_Analyse.tex
@@ -1,5 +1,32 @@
 \chapter{Analyse und Modellierung}
-\label{ch:analyse}
+\label{ch:4}
 
-\section{Abschnitt}
-\label{sec:}
+\section{Das Phasenmodell}
+\label{sec:4.1}
+
+Mit Blick in die Literatur fällt auf, dass eine zusammenhängende Darstellung des \ac{TVD}-Gesamtprozesses oder die Gliederung in ein Phasenmodell wie es hierzulande durch HOAI und AHO häufig der Fall ist, auffällig selten stattfindet. Der Fokus liegt mehr auf Prinzipien, Rollen, Arbeitsweisen und Entscheidungslogiken als auf einem formalisierten Prozessmodell.\\
+Die Gründe dafür liegen mutmaßlich in den Kernideen von \ac{TVD} selbst und der Art und Weise wie es aufgrund letzterer aktuell in der Praxis integriert wird. Wesentlich sind hierfür die folgenden Punkte:\\
+
+- Philosophischer Charakter:TVD ist in erster Linie ein Denk- und Managementprinzip, nicht ein „Planungsphasen-System“.\\
+- Integration statt eigener Prozess:
+In der Praxis wird TVD in bestehende Planungsmodelle eingebettet (USA: IPD + Designphasen; DE: HOAI-Gefüge).
+Dadurch verliert es seine trennscharfe Prozesssicht.\\
+- Iterative, zyklische Natur: TVD basiert auf ständigen Rückkopplungs- und Entscheidungszyklen. Lineare Abbildungen werden dem nicht gerecht.\\
+- Qualität, Tiefe und Sequenz der Anwendung hängen stark vom Projektumfeld ab (Beteiligte, Vertrag, Risikoteilung, Vergabeform etc.).
+Ergo: Kein einheitlicher Ablauf kann überall passen.\\
+- Die US-Forschung liefert eher Richtimpulse als standardisierte Prozessmodelle; europäische bzw. deutsche Normung fehlt nahezu vollständig.\\
+
+Wenn kein eindeutiges TVD-Phasenmodell existiert, muss ein idealtypisches konstruieren, um überhaupt messen zu können, wo deutsche Praxis kompatibel ist und wo nicht..
+TVD lebt zwar von Iteration und Flexibilität, aber zur Bewertung der Anschlussfähigkeit an HOAI, AHO, Projektstufen etc. wird eine klar definierte Prozesslogik benötigt.
+Das idealtypisches Phasenmodell erhebt kein Anspruch auf Normierung ist, sondern dient im Rahmen dieser Untersuchung als ein analytisches Hilfsmittel.\\
+
+Erster Entwurf/Wahl des Phasenmodells\\
+
+0 - Projekt Framing und Value Desfinition\\
+1 - Target Definition und Target Costing\\
+2 - Design to Target (Set Based Design, Iterativ)\\
+3 - Validate, Commit \& Learn (Gate/Lesson)\\
+
+
+
+
